2004-02-06  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-03  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/Makefile.am
	* 16x16/apps/im-jabber.png
	* 48x48/apps/Makefile.am
	* 48x48/apps/im-jabber.png: jabber icon (Evo)

2004-01-30  Christophe Merlet  <redfox@redfoxcenter.org>

	* 48x48/mimetypes/Makefile.am: Added DESTDIR variable in
	install-data-hook section.

=== gnome-icon-theme 1.1.6 ===
	
2004-01-30  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	Release 1.1.6

2004-01-29  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/Makefile.am
	* 16x16/apps/im-aim.png
	* 16x16/apps/im-icq.png
	* 16x16/apps/im-msn.png
	* 16x16/apps/im-yahoo.png: IM clients at 16x16

2004-01-29  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/Makefile.am
	* 48x48/apps/im-aim.png
	* 48x48/apps/im-icq.png
	* 48x48/apps/im-msn.png
	* 48x48/apps/im-yahoo.png: IM clients (for Evo)

2004-01-29  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/net/Makefile.am
	* 16x16/stock/net/stock_video-conferencing.png
	* 24x24/stock/net/Makefile.am
	* 24x24/stock/net/stock_video-conferencing.png: needed in Evo;
	  originating from gnome-meeting

2004-01-29  Jakub Steiner <jimmac@ximian.com>

	* 48x48/stock/generic/stock_home.png
	* 48x48/stock/generic/Makefile.am: needed by Evolution. drawn by tigert

2004-01-29  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/object/Makefile.am
	* 16x16/stock/object/stock_insert_bookmark.png (r)
	* 16x16/stock/object/stock_pin.png (a)
	* 24x24/stock/object/Makefile.am
	* 24x24/stock/object/stock_insert_bookmark.png (r)
	* 24x24/stock/object/stock_pin.png (a): renamed to a generic name

2004-01-29  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/Makefile.am
	* 16x16/stock/generic/stock_mark.png
	* 24x24/stock/generic/Makefile.am
	* 24x24/stock/generic/stock_mark.png
	* 32x32/stock/net/Makefile.am
	* 32x32/stock/net/stock_mail-receive.png