@@ -1,3 +1,14 @@
+2004-02-06  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/stock/generic/Makefile.am
+	* 16x16/stock/generic/stock_active.png
+	* 16x16/stock/generic/stock_properties.png
+	* 24x24/stock/generic/Makefile.am
+	* 24x24/stock/generic/stock_active.png
+	* 24x24/stock/generic/stock_properties.png: from OOo
+	* 48x48/devices/Makefile.am
+	* 48x48/devices/gnome-dev-mouse-ball.png: 48x48 version
+
 2004-02-06  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.
